<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoiceCheckActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/save_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/check_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="0.4"
            android:elevation="10dp"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.4"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/textView_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeZero" />

                <TextView
                    android:id="@+id/textView_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/timeZero" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/button_prev"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorAccent"
                    android:visibility="gone"
                    app:srcCompat="@drawable/exo_controls_previous" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/button_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    app:fabSize="normal"
                    app:srcCompat="@drawable/exo_controls_pause" />

                <ImageButton
                    android:id="@+id/button_next"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorAccent"
                    android:visibility="gone"
                    app:srcCompat="@drawable/exo_controls_next" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/browser_actions_bg_grey"
            android:orientation="horizontal"
            android:layout_weight="0.2" >

            <Button
                android:id="@+id/redoButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_border_line"
                android:drawableTop="@drawable/ic_history_blue_grey_500_36dp"
                android:paddingTop="10dp"
                android:text="@string/reDoButton" />

            <Button
                android:id="@+id/okButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_border_line"
                android:drawableTop="@drawable/ic_check_circle_red_500_36dp"
                android:paddingTop="10dp"
                android:text="@string/okButton" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>