<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rowView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/ageLabel"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="0.2"
            android:background="@drawable/shape_rounded_corners_10dp"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/blankText"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/genderLabel"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0.2"
            android:background="@drawable/shape_rounded_corners_10dp_g"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/blankText"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/projectName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/blankText"
            android:visibility="gone" />

        <TextView
            android:id="@+id/idLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/blankText"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/blankText"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createText"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/createdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/blankText"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadLineText"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/deadLineLabel"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/blankText"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>