<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context=".VoiceRecPreparationActivity">

    <Button
        android:id="@+id/textSizeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0.3"
        android:background="@android:color/transparent"
        android:text="@string/blankText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0.7"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/textSizeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="7">

            <!--<TextView-->
            <!--android:id="@+id/textView14"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginRight="8dp"-->
            <!--android:layout_weight="1"-->
            <!--android:text="@string/blankText"-->
            <!--android:textSize="12sp" />-->
            <TextView
                android:id="@+id/ageLabel"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="2"
                android:background="@drawable/shape_rounded_corners_10dp"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/blankText"
                android:textColor="@android:color/white"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/genderLabel"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:background="@drawable/shape_rounded_corners_10dp_g"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/blankText"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/blankText"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/createdLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/blankText"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/deadLineLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/blankText"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/titleBlueColor"
        app:layout_constraintBottom_toBottomOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/onRecordingTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

            <Button
                android:id="@+id/recordButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_mic_black_36dp"
                android:text="@string/recordStartButtonText" />

            <TextView
                android:id="@+id/recTimeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/recTimeText"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

    </android.support.design.widget.BottomNavigationView>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/Group_Table_View_BackGroundColor"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/detailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blankText"
                tools:layout_editor_absoluteX="162dp"
                tools:layout_editor_absoluteY="245dp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>